gl33-master/src/test/deca/context/invalid/other/heritageMultiple.deca
// Test de contexte invalide : héritage multiple

class A{}

class B{}

class C extends A,B{}
